fix some grids with pane overflowing in some cases

--- a/slick.grid.css
+++ b/slick.grid.css
@@ -202,7 +202,6 @@ classes should alter those!
 }
 
 .slick-pane {
-  position: absolute;
   outline: 0;
   overflow: hidden;
   width: 100%;
